2008-07-25  John W. Eaton  <jwe@octave.org>

	* symtab.cc (get_dispatch_type): New function.
	(symbol_table::fcn_info::fcn_info_rep::find): Use it.

	* ov-class.cc (set_class_relationship): Delete static function.
	(Fsuperiorto, Finferiorto): Warn about precedence conflicts.
	Call symbol_table::set_class_relationship instead of local static
	function.
	* symtab.h (symbol_table::class_precedence_table): New data member.
	(symbol_table::set_class_relationship, symbol_table::is_superiorto):
	New static functions.

2008-07-24  John W. Eaton  <jwe@octave.org>

	* load-path.h (load_path::dir_info::class_info): New struct.
	(load_path::dir_info::method_file_map_type): Now a map from
	class name to a to a class_info object.  Change all uses.
	* load-path.cc (load_path::dir_info::get_method_file_map):
	Also look for private functions in the class directory.
	(load_path::add_to_method_map): Also add private functions from
	class directories to private_fcn_map.

	* dirfns.cc (Fmkdir): If directory already exists, return status =
	true, but also set error message.

2008-07-23  John W. Eaton  <jwe@octave.org>

	* ov-usr_fcn.cc (octave_user_function::do_multi_index_op):
	Don't unwind_protect and set curr_parent_function here.
	* toplev.cc (curr_parent_function): Delete definition.
	* toplev.h: (curr_parent_function): Delete declaration.

	* ov-usr-fcn.h (octave_user_function::parent_scope): New data member.
	(octave_user_function::parent_fcn_scope,
	octave_user_function::stash_parent_fcn_scope): New functions.
	* ov-usr_fcn.cc (octave_user_function::octave_user_function):
	Initialize parent_scope.
	* symtab.cc (symbol_table::fcn_info::fcn_info_rep::find):
	Check parent of current function by looking at call stack, not
	global curr_parent_function variable.
	* parse.y (frob_function): If parsing nested function, stash
	current parent function scope.
	* ov-fcn.h (octave_function::parent_fcn_scope): New virtual function.

2008-07-22  Michael Goffioul  <michael.goffioul@gmail.com>
